Se implementa el uso correcto de la indexacion con el archivo robots.txt y el archivo sitemap.xml, ademas de implementar todas las rutas satisfactoriamente

--- a/src/layouts/MenuAppBar/MenuAppBar.css
+++ b/src/layouts/MenuAppBar/MenuAppBar.css
@@ -1,14 +1,9 @@
 @import url("../../index.css");
 
-
-
-
-
-
 .my-link:hover,
 .my-link-main {
     /* Cambiar color de texto */
-    color: var(--AzulFuerte)!important;
+    color: var(--AzulFuerte) !important;
     text-decoration: none;
 
 }
@@ -24,20 +19,20 @@
 .link-btn {
     color: var(--Negro) !important;
     /* Cambiar color de texto */
-    background-color: var(--AzulDebilFuerte) !important;
-    border-radius: 10px;
+    background-color: var(--AzulFuerte) !important;
+    border-radius: 1rm;
     text-decoration: none;
     /* Eliminar subrayado */
-    padding: 8px 13px !important;
-    /* Agregar relleno */
+
+
 
 }
 
 .navbarmenu {
-    
+
     font-family: var(--FuentePrincipal) !important;
     font-size: large;
-    height: 80px;
+    height: 8vh;
     z-index: 1;
     background-color: var(--Negro) !important;
 }
