--- a/src/layouts/HeaderLayout/HeaderLayout.css
+++ b/src/layouts/HeaderLayout/HeaderLayout.css
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Tangerine:wght@400;700&display=swap');
 
+
+#tsparticles,
+#tsparticles>* {
+    position: absolute!important;
+    z-index: -1 !important;
+    display: block!important;
+}
+
+
 .header-container {
-    width: 100%;
-    height: 100vh;
+    margin-top: 1em;
+    width: 100vw;
     /* Ajuste "100dvb" a "100vh" para corregir el error de escritura */
     background-image: url(../../assets/img/header/star-bg.png), url(../../assets/img/header/star-bg.png);
     /* Especifica las imágenes de fondo */
@@ -14,10 +23,8 @@
     /* Especifica los tamaños de las imágenes de fondo */
     background-attachment: fixed;
     /* Fija el fondo en su posición */
+    z-index: 1 !important;
 }
-
-
-
 
 .text-primary {
     text-decoration: none !important;
@@ -29,16 +36,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 92vh;
 }
 
 
-
-.player-wrapper {
-    position: relative;
-    padding-top: 56.25%;
-    /* Player ratio: 100 / (1280 / 720) */
-}
 
 .react-player {
     position: absolute;
@@ -52,12 +53,38 @@
 }
 
 
+.filter-img {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    max-width: 70vw;
+    height: 100%;
+    max-height: 70vh;
 
-.imgGonHer {
-    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.2), 0px 0px 5px 0px rgba(0, 0, 0, 0.24);
-    border-radius: 10px;
+    /* position: relative !important; */
+
+    border-radius: 1rem;
+    filter: sepia(0%) drop-shadow(-0.7rem -0.7rem 4rem blue) brightness(1);
+
+}
+.ReactFlipCard__container  {
+    width: 100%!important;
+    height: 100%!important;
+}
+.flip-card{
+    width: 100%!important;
+    height: 100%!important;
 }
 
+.imgLuis {
+    width: 100%;
+    height: 100%;
+}
+
+.tsparticles {
+    position: static;
+}
 
 .tangerine-regular {
     font-family: "Tangerine", cursive;
@@ -67,11 +94,15 @@
 
 .tangerine-bold {
     font-family: "Tangerine", cursive;
-    font-weight: 900;
+    font-weight: 700;
     font-style: normal;
-    font-size: 70pt;
+    font-size: 7rem;
+    
 }
 
+.text-justify {
+    text-align: justify !important;
+}
 
 .cedarville-cursive-regular {
     font-family: "Cedarville Cursive", cursive;
@@ -80,58 +111,10 @@
 }
 
 
-
-
-
-
-
-/* ---- stats.js ---- */
-
-.count-particles {
-    background: #000022;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13E8E9;
-    font-size: .8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
+@media screen and (max-width: 768px) {
+    .tangerine-bold {
+        font-size: 50pt;
+        text-align: center;
+    }
 }
 
-.js-count-particles {
-    font-size: 1.1em;
-}
-
-#stats,
-.count-particles {
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
-}
-
-#stats {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-}
-
-.count-particles {
-    border-radius: 0 0 3px 3px;
-}
-
-
-/* ---- particles.js container ---- */
-
-#particles-js {
-    width: 100%;
-    height: 100%;
-    background-color: #b61924;
-    background-image: url('');
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-}
